test/testData/parser/negative/incorrectStructs.c
struct SS {
    int a;
    int b, d;
    typedef struct {
        double x;
        struct XXX ****xx;
    } ss1, *ss2, **ss3;

    ss1 v1, *pv1, **pv1;
    ss2 v2, *pv2, **pv2;
    ss3 v3, *pv3, **pv3;
};


